--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ li {
     width: 100%;
     display: flex;
     justify-content: center;
-    background-image: url(/assets/img/hero.jpg);
+    background-image: url('/assets/img/hero.jpg');
     background-size: cover;
 }
 
@@ -180,12 +180,12 @@ li {
     }
 
     .container-1 {
-        background-image: url(/assets/img/article-image-1video-placeholder.jpg);
+        background-image: url('/assets/img/article-image-1video-placeholder.jpg');
         background-size: cover;
     }
 
     .container-2{
-        background-image: url(/assets/img/article-image-2video-placeholder.jpg);
+        background-image: url('/assets/img/article-image-2video-placeholder.jpg');
         background-size: cover;
     }
 }
