--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ li {
     width: 100%;
     display: flex;
     justify-content: center;
-    background-image: url('/assets/img/hero.jpg');
+    background-image: url('../img/hero.jpg');
     background-size: cover;
 }
 
